--- a/grupo4/src/app/components/dashboard/dashboard.component.html
+++ b/grupo4/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,85 @@
-<p>dashboard works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <div class="contenedor">
+    <h1>Sucursales</h1>
+    <div class="card" style="width: 18rem;">
+      <img src="../../../assets/imagenes/descarga1.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Nombre de la sucursal</h5>
+        <p class="card-text">Informacion detallada de la sucursal</p>
+        <a href="#" class="btn btn-outline-success">Ir a la sucursal</a>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <img src="../../../assets/imagenes/descarga.jpg" class="card-img-top" alt="...">
+      <div class="card-body"cted>
+        <h5 class="card-title">Nombre de la sucursal</h5>
+        <p class="card-text">Informacion detallada de la sucursal</p>
+        <a href="#" class="btn btn-outline-success">Ir a la sucursal</a>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <img src="../../../assets/imagenes/descarga3.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Nombre de la sucursal</h5>
+        <p class="card-text">Informacion detallada de la sucursal</p>
+        <a href="#" class="btn btn-outline-success">Ir a la sucursal</a>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <img src="../../../assets/imagenes/descarga4.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Nombre de la sucursal</h5>
+        <p class="card-text">Informacion detallada de la sucursal</p>
+        <a href="#" class="btn btn-outline-success">Ir a la sucursal</a>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <img src="../../../assets/imagenes/descarga5.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Nombre de la sucursal</h5>
+        <p class="card-text">Informacion detallada de la sucursal</p>
+        <a href="#" class="btn btn-outline-success">Ir a la sucursal</a>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <img src="../../../assets/imagenes/descarga6.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Nombre de la sucursal</h5>
+        <p class="card-text">Informacion detallada de la sucursal</p>
+        <a href="#" class="btn btn-outline-success">Ir a la sucursal</a>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <img src="../../../assets/imagenes/descarga7.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Nombre de la sucursal</h5>
+        <p class="card-text">Informacion detallada de la sucursal</p>
+        <a href="#" class="btn btn-outline-success">Ir a la sucursal</a>
+      </div>
+    </div>
+     <div class="card" style="width: 18rem;">
+      <img src="../../../assets/imagenes/descarga8.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Nombre de la sucursal</h5>
+        <p class="card-text">Informacion detallada de la sucursal</p>
+        <a href="#" class="btn btn-outline-success">Ir a la sucursal</a>
+      </div>
+    </div>
+
+
+
+
+
+  </div>
+
+  </body>
+
+</html>
