--- a/grupo4/src/app/components/home/home.component.html
+++ b/grupo4/src/app/components/home/home.component.html
@@ -1,1 +1,13 @@
-<p>home works!</p>
+
+<div id="home">
+  <div class="home-wrap text-center">
+    <h1 class="home-header">Bienvenido</h1>
+    <h2>Hello World!</h2>
+    <hr class="home-line">
+    <div class="home-buttons">
+      <a  class="btn btn-default"><i class="bi bi-github"></i></a>
+      <a  class="btn btn-default"><i class="bi bi-microsoft"></i> </a>
+      <a  class="btn btn-default"><i class="bi bi-facebook"></i></a>
+    </div>
+  </div>
+</div>
