--- a/grupo4/src/app/components/login/login.component.html
+++ b/grupo4/src/app/components/login/login.component.html
@@ -1,1 +1,63 @@
-<p>login works!</p>
+<body>
+  <div class="login-wrap">
+    <div class="login-html">
+      <input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">{{IniciarSesion}}</label>
+      <input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">{{Registrarme}}</label>
+      <div class="login-form">
+        <div class="sign-in-htm">
+          <div class="group">
+            <label for="user" class="label">{{nombreUsuario}}</label>
+            <input id="user" type="text" class="input">
+          </div>
+          <div class="group">
+            <label for="pass" class="label">{{Contrasena}}</label>
+            <input id="pass" type="password" class="input" data-type="password">
+          </div>
+          <div class="group">
+            <input id="check" type="checkbox" class="check" checked>
+            <label for="check"><span class="icon"></span> {{Recordarme}}</label>
+          </div>
+          <div class="group">
+            <input type="submit" class="button" value={{IniciarSesion}}>
+          </div>
+          <div class="hr"></div>
+          <div class="foot-lnk">
+            {{ContraOlvid}}
+          </div>
+        </div>
+        <div class="sign-up-htm">
+          <div class="group">
+            <label for="user" class="label">{{nombreUsuario}}</label>
+            <input id="user" type="text" class="input">
+          </div>
+          <div class="group">
+            <label for="pass" class="label">{{Contrasena}}</label>
+            <input id="pass" type="password" class="input" data-type="password">
+          </div>
+          <div class="group">
+            <label for="pass" class="label">Repita su {{Contrasena}}</label>
+            <input id="pass" type="password" class="input" data-type="password">
+          </div>
+          <div class="group">
+            <label for="pass" class="label">{{mail}}</label>
+            <input id="pass" type="text" class="input">
+          </div>
+          <div class="group">
+            <input type="submit" class="button" value={{Registrarme}}>
+          </div>
+          <p>Sign up with social platforms</p>
+          <div class="d-grid gap-2" role="group" aria-label="Basic checkbox toggle button group">
+            <input type="checkbox" class="btn-check" id="btncheck1" autocomplete="off">
+            <label class="btn btn-outline-light btn-sm" for="btncheck1"><i class="bi bi-facebook"></i> - With your FaceBook</label>
+
+            <input type="checkbox" class="btn-check" id="btncheck3" autocomplete="off">
+            <label class="btn btn-outline-light btn-sm" for="btncheck3"><i class="bi bi-envelope"></i> - With your Gmail</label>
+
+            <input type="checkbox" class="btn-check" id="btncheck3" autocomplete="off">
+            <label class="btn btn-outline-light btn-sm" for="btncheck3"><i class="bi bi-microsoft"></i> - With your Microsoft</label>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
