--- a/grupo4/src/app/components/navbar/navbar.component.html
+++ b/grupo4/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,25 @@
-<p>navbar works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" >Bienvenido</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="home" routerLinkActive="active"><i class="bi bi-house-fill"></i>Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="dashboard" routerLinkActive="active"><i class="bi bi-bookmark-dash-fill"></i>Dashboard</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " routerLink="login" routerLinkActive="active"><i class="bi bi-door-open-fill"></i>Login</a>
+        </li>
+      </ul>
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-light" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
